--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,3 +1,5 @@
+@header-height: 48px;
+
 :host {
   display: flex;
   text-rendering: optimizeLegibility;
@@ -5,14 +7,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.menu-sidebar {
+.sider {
   position: relative;
   z-index: 10;
   min-height: 100vh;
   box-shadow: 2px 0 6px rgba(0, 21, 41, .35);
 }
-
-@header-height: 48px;
 
 .header-trigger {
   height: @header-height;
