--- a/src/app/pages/posts/post-list/post-list.component.less
+++ b/src/app/pages/posts/post-list/post-list.component.less
@@ -1,3 +1,5 @@
+@import "/node_modules/ng-zorro-antd/style/themes/default";
+
 @tag-active-bg: #1890ff;
 @tag-active-color: #fff;
 
@@ -52,5 +54,14 @@ nz-tag:hover {
 .post-form {
   nz-form-label {
     width: 100px;
+  }
+}
+
+.btn-copy {
+  margin-left: 8px;
+  cursor: pointer;
+
+  &:hover {
+    color: @link-hover-color;
   }
 }
