--- a/src/app/pages/posts/post-form/post-form.component.html
+++ b/src/app/pages/posts/post-form/post-form.component.html
@@ -85,8 +85,7 @@
     </div>
     <div class="form-right">
       <nz-form-item class="form-btns">
-        <button nz-button nzSize="large" nzType="link">存草稿</button>
-        <button nz-button nzSize="large" nzType="link">预览</button>
+        <button nz-button nzSize="large" nzType="default">存草稿</button>
         <button nz-button nzSize="large" nzType="primary" class="form-btn-primary" (click)="savePost()">发布</button>
       </nz-form-item>
       <nz-form-item>
