--- a/src/styles.less
+++ b/src/styles.less
@@ -19,6 +19,8 @@
 }
 
 .table-operations {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 16px;
 
   [nz-button] + [nz-button] {
@@ -26,7 +28,6 @@
   }
 
   .table-search {
-    float: right;
     width: 240px;
   }
 }
