--- a/src/app/pages/posts/post-list/post-list.component.html
+++ b/src/app/pages/posts/post-list/post-list.component.html
@@ -1,15 +1,19 @@
 <div class="table-operations" [ngSwitch]="postType">
-  <ng-container *ngSwitchCase="'post'">
-    <a nz-button nzType="primary" routerLink="/posts/edit-article">写文章</a>
-  </ng-container>
-  <ng-container *ngSwitchCase="'page'">
-    <a nz-button nzType="primary" routerLink="/posts/edit-page">创建新页面</a>
-  </ng-container>
-  <ng-container *ngSwitchCase="'attachment'">
-    <a nz-button nzType="primary" routerLink="/resources/upload">上传文件</a>
-  </ng-container>
-  <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate">快速编辑</button>
-  <button nz-button nzType="default" [disabled]="!trashEnabled" (click)="deletePosts()">删除</button>
+  <div>
+    <ng-container *ngSwitchCase="'post'">
+      <a nz-button nzType="primary" routerLink="/posts/edit-article">写文章</a>
+    </ng-container>
+    <ng-container *ngSwitchCase="'page'">
+      <a nz-button nzType="primary" routerLink="/posts/edit-page">创建新页面</a>
+    </ng-container>
+    <ng-container *ngSwitchCase="'attachment'">
+      <a nz-button nzType="primary" routerLink="/resources/upload">上传文件</a>
+    </ng-container>
+    <ng-container *ngIf="postType !== 'all'">
+      <button nz-button nzType="default" [disabled]="!allChecked && !indeterminate">快速编辑</button>
+      <button nz-button nzType="default" [disabled]="!trashEnabled" (click)="deletePosts()">删除</button>
+    </ng-container>
+  </div>
   <div class="table-search">
     <nz-input-group nzSearch [nzAddOnAfter]="searchBtn">
       <input nz-input type="text" [(ngModel)]="keyword" (keyup)="onPostSearch($event)" placeholder="Search..."/>
@@ -36,9 +40,10 @@
 >
   <thead>
   <tr>
-    <th nzWidth="40px" [nzChecked]="allChecked" [nzIndeterminate]="indeterminate"
+    <th *ngIf="postType !== 'all'" nzWidth="40px" [nzChecked]="allChecked" [nzIndeterminate]="indeterminate"
         (nzCheckedChange)="onAllChecked($event)"></th>
     <ng-container *ngIf="postType !== 'attachment'">
+      <th *ngIf="postType === 'all'" nzWidth="100px" nzColumnKey="postType">类型</th>
       <th nzWidth="220px" nzColumnKey="postTitle">标题</th>
       <th nzWidth="90px" nzColumnKey="postDate" [nzSortFn]="true" [nzSortPriority]="true" nzCustomFilter>
         日期
@@ -50,7 +55,7 @@
           <i nz-icon nzType="filter" nzTheme="fill"></i>
         </nz-filter-trigger>
       </th>
-      <th nzWidth="120px" nzColumnKey="category" *ngIf="postType === 'post'" nzCustomFilter>
+      <th *ngIf="postType === 'post' || postType === 'all'" nzWidth="120px" nzColumnKey="category" nzCustomFilter>
         分类
         <nz-filter-trigger
           [(nzVisible)]="categoryFilterVisible"
@@ -65,13 +70,12 @@
       <th nzWidth="60px" nzColumnKey="commentCount" [nzSortFn]="true" [nzSortPriority]="true">评论</th>
       <th nzWidth="100px" nzColumnKey="commentFlag" [nzFilters]="commentFlagFilter" [nzFilterFn]="true">评论状态</th>
       <th nzWidth="80px" nzColumnKey="postStatus" [nzFilters]="statusFilter" [nzFilterFn]="true">可见性</th>
-      <th nzWidth="70px" nzColumnKey="postOriginal"
-          *ngIf="postType === 'post'" [nzFilters]="originalFilter" [nzFilterFn]="true">原创</th>
+      <th nzWidth="70px" nzColumnKey="postOriginal" [nzFilters]="originalFilter" [nzFilterFn]="true">原创</th>
       <th nzWidth="140px" nzColumnKey="postModified" [nzSortFn]="true" [nzSortPriority]="true">修改时间</th>
       <th nzWidth="140px" nzColumnKey="postCreated" [nzSortFn]="true" [nzSortPriority]="true">创建时间</th>
       <th nzWidth="80px" nzColumnKey="author">作者</th>
       <th nzWidth="60px" nzColumnKey="publisher">发布者</th>
-      <th nzWidth="170px" nzRight>操作</th>
+      <th *ngIf="postType !== 'all'" nzWidth="170px" nzRight>操作</th>
     </ng-container>
     <ng-container *ngIf="postType === 'attachment'">
       <th nzWidth="180px" nzColumnKey="postTitle">标题</th>
@@ -95,14 +99,24 @@
   </thead>
   <tbody>
   <tr *ngFor="let data of postList">
-    <td [nzChecked]="checkedMap[data.post.postId] || false"
+    <td *ngIf="postType !== 'all'" [nzChecked]="checkedMap[data.post.postId] || false"
         (nzCheckedChange)="onItemChecked(data.post.postId, $event)"></td>
+    <td *ngIf="postType === 'all'">
+      <ng-container [ngSwitch]="data.post.postType">
+        <a *ngSwitchCase="'page'" routerLink="/posts/pages">{{ data.post.postType | postType }}</a>
+        <a *ngSwitchCase="'attachment'" routerLink="/resources">{{ data.post.postType | postType }}</a>
+        <a *ngSwitchCase="'post'" routerLink="/posts/articles">{{ data.post.postType | postType }}</a>
+      </ng-container>
+    </td>
     <ng-container *ngIf="postType !== 'attachment'">
       <td nzEllipsis [title]="data.post.postTitle">
-        <a [href]="data.post.postGuid" target="_blank">{{ data.post.postTitle }}</a>
+        <a *ngIf="data.post.postType !== 'attachment' || !isImage(data.post)"
+           [href]="data.post.postGuid" target="_blank">{{ data.post.postTitle }}</a>
+        <a *ngIf="data.post.postType === 'attachment' && isImage(data.post)"
+           (click)="previewImage(data.post.postGuid)">{{ data.post.postTitle }}</a>
       </td>
       <td [title]="data.post.postDate | date: 'yyyy-MM-dd'">{{ data.post.postDate | date: 'yy-MM-dd' }}</td>
-      <td nzEllipsis *ngIf="postType === 'post'">
+      <td *ngIf="postType === 'post' || postType === 'all'" nzEllipsis>
         <a routerLink="./" [queryParams]="{category: cat.taxonomySlug}" *ngFor="let cat of data.categories">
           <nz-tag nzColor="blue">{{cat.taxonomyName}}</nz-tag>
         </a>
@@ -112,23 +126,25 @@
           <nz-tag nzColor="blue">{{tag.taxonomyName}}</nz-tag>
         </a>
       </td>
-      <td nzAlign="right">{{ data.post.postViewCount }}</td>
+      <td nzAlign="right">{{ data.post.postType === 'attachment' ? '-' : data.post.postViewCount }}</td>
       <td nzAlign="right">
-        <a routerLink="/comments" [queryParams]="{postId: data.post.postId}">{{ data.post.commentCount || 0 }}</a>
+        <a *ngIf="data.post.postType !== 'attachment'" routerLink="/comments"
+           [queryParams]="{postId: data.post.postId}">{{ data.post.commentCount || 0 }}</a>
+        <ng-container *ngIf="data.post.postType === 'attachment'">-</ng-container>
       </td>
       <td>
-        <a [ngClass]="'comment-flag-' + data.post.commentFlag"
-           routerLink="./"
-           [queryParams]="{commentFlag: data.post.commentFlag}">
+        <a *ngIf="data.post.postType !== 'attachment'" [ngClass]="'comment-flag-' + data.post.commentFlag"
+           routerLink="./" [queryParams]="{commentFlag: data.post.commentFlag}">
           {{ data.post.commentFlag | commentFlag }}
         </a>
+        <ng-container *ngIf="data.post.postType === 'attachment'">-</ng-container>
       </td>
       <td>
         <a [ngClass]="'status-' + data.post.postStatus" routerLink="./" [queryParams]="{status: data.post.postStatus}">
           {{ data.post.postStatus | postStatus }}
         </a>
       </td>
-      <td *ngIf="postType === 'post'">
+      <td>
         <a routerLink="./" [queryParams]="{original: data.post.postOriginal}">
           {{ data.post.postOriginal === 1 ? '是' : '否' }}
         </a>
@@ -177,7 +193,7 @@
         {{ data.post.postCreated | date:'yy-MM-dd HH:mm' }}
       </td>
     </ng-container>
-    <td nzRight>
+    <td *ngIf="postType !== 'all'" nzRight>
       <a (click)="editPost(data)">快速编辑</a>
       <nz-divider nzType="vertical"></nz-divider>
       <ng-container *ngIf="postType !== 'attachment'">
