fix: antv g2 can not fit automatically

--- a/src/app/pages/posts/post-list/post-list.component.html
+++ b/src/app/pages/posts/post-list/post-list.component.html
@@ -492,12 +492,12 @@
         <div nz-row [nzGutter]="postFormRowGutter">
           <div nz-col [nzSpan]="24">
             <nz-form-item>
-              <nz-form-label nzRequired>版权类型</nz-form-label>
+              <nz-form-label nzRequired>许可协议</nz-form-label>
               <nz-form-control>
                 <nz-radio-group formControlName="copyrightType" nzName="copyrightType">
                   <label nz-radio [nzValue]="0">禁止转载</label>
                   <label nz-radio [nzValue]="1">转载需授权</label>
-                  <label nz-radio [nzValue]="2">CC-BY-NC-ND</label>
+                  <label nz-radio [nzValue]="2">CC: BY-NC-ND</label>
                 </nz-radio-group>
               </nz-form-control>
             </nz-form-item>
