add vote module and latest vote list; optimize detail modal; optimize styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nz-layout class="app-layout">
   <nz-sider nzCollapsible
-            class="sider"
+            class="app-sider"
             nzWidth="200px"
             nzBreakpoint="md"
             [nzCollapsedWidth]="48"
@@ -54,7 +54,7 @@
       </div>
     </nz-header>
     <nz-content>
-      <div class="inner-content">
+      <div class="app-content">
         <i-breadcrumb></i-breadcrumb>
         <router-outlet></router-outlet>
       </div>
