--- a/src/app/pages/home/home/home.component.less
+++ b/src/app/pages/home/home/home.component.less
@@ -88,7 +88,7 @@
 }
 
 .comment {
-  .comment-item {
+  &-item {
     &:not(:last-child) {
       padding-bottom: 16px;
       border-bottom: 1px solid #f0f0f0;
@@ -97,36 +97,41 @@
     &:not(:first-child) {
       padding-top: 16px;
     }
-  }
 
-  .comment-item-meta, .comment-item-content {
-    margin-bottom: 8px;
-  }
+    &-meta, &-content {
+      margin-bottom: 8px;
+    }
 
-  .comment-item-meta {
-    font-size: 12px;
-    color: #00000073;
-  }
+    &-meta {
+      font-size: 12px;
+      color: #00000073;
 
-  .comment-item-actions {
-    a:not(:last-child) {
-      &::after {
-        margin: 0 8px;
+      span:not(:last-child):after {
         content: '|';
-        color: rgba(0, 0, 0, .45);
+        margin: 0 8px;
+      }
+    }
+
+    &-actions {
+      a:not(:last-child) {
+        &::after {
+          margin: 0 8px;
+          content: '|';
+          color: rgba(0, 0, 0, .45);
+        }
       }
     }
   }
 }
 
-.interaction {
-  .item {
+.vote {
+  &-item {
     &:not(:last-child) {
       margin-bottom: 12px;
     }
 
     > span:not(:last-child) {
-      margin-right: 4px;
+      margin-right: 8px;
     }
 
     &-ip {
