--- a/src/app/pages/options/option.less
+++ b/src/app/pages/options/option.less
@@ -30,6 +30,18 @@
     width: 80px;
   }
 
+  .label-text {
+    margin: 0 8px;
+
+    &-left {
+      margin-right: 8px;
+    }
+
+    &-right {
+      margin-left: 8px;
+    }
+  }
+
   [nz-row]:not(:last-child) {
     margin-bottom: 24px;
   }
